--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,7 +41,7 @@ dev_dependencies:
     sdk: flutter
   dob_input_field: ^2.0.0
   crypto: ^3.0.1
-  sqflite: # SQLite features
+  sqflite: ^2.2.9
   path: # Features for file locations
   http:
   cookie_jar: ^4.0.8
