--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -74,6 +74,12 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/Logo_init.jpeg
+    - assets/Lamp_blue.png
+    - assets/Lamp_green.png
+    - assets/Lamp_off.png
+    - assets/Lamp_purple.png
+    - assets/Lamp_red.png
+    - assets/Lamp_yellow.png
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
