--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -86,6 +86,14 @@ flutter:
     - assets/Learning_to_Fly.jpg
     - assets/Sultans_of_Swing.jpg
     - assets/The_Piper's_Call.jpg
+    - assets/RodrigoGrave.jpg
+    - assets/EduardoSilveiro.jpg
+    - assets/GonçaloMateus.jpg
+    - assets/DiogoMatos.jpg
+
+    
+
+
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
