--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,9 @@ dependencies:
   cupertino_icons: ^1.0.6
   font_awesome_flutter: ^10.8.0
 
+
+
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -54,6 +57,7 @@ dev_dependencies:
   fl_chart:
   syncfusion_flutter_sliders: ^20.3.47
   sleek_circular_slider: ^2.0.0
+  flutter_launcher_icons: ^0.13.1
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -65,6 +69,11 @@ dev_dependencies:
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
+flutter_launcher_icons:
+  android: true
+  
+  image_path_android: "assets/Logo_init.jpeg"
+   
 # The following section is specific to Flutter packages.
 flutter:
 
