--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -99,6 +99,11 @@ flutter:
     - assets/EduardoSilveiro.jpg
     - assets/GonçaloMateus.jpg
     - assets/DiogoMatos.jpg
+    - assets/user1.jpg
+    - assets/user2.jpg
+    - assets/user3.jpg
+    - assets/1.jpg
+
 
     
 
